kubernetes-networks/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver
  namespace: homework
  labels:
    app.kubernetes.io/instance: webserver
    app.kubernetes.io/name: webserver
spec:
  ports:
  - name: http-8000
    protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: webserver
  type: ClusterIP
